# expression_in_movements_sap

./: .gitignore  README.md  pyproject.toml
configs/: experiment_cnn1d.yaml  experiment_cnn1d_es.yaml  experiment_cnn1d_intra.yaml  experiment_lstm.yaml  experiment_lstm_es.yaml  experiment_lstm_intra.yaml  experiment_rf.yaml  experiment_rf_expert.yaml  experiment_rf_expert_intra.yaml  experiment_rf_intra.yaml
docs/: ARCHITECTURE.md  DATA_SETUP.md  FAQ.md  METHOD_A_RESULTS.md  RESULTS.md
docs/presentation/A-Team/: make_assets.py  script.md  slides.html
notebooks/: phase7_comparison.ipynb
reports/issue24/: cnn1d_intra_vs_loso.md  expert_rf_intra_vs_loso.md  expert_rf_vs_cnn1d_intra.md  expert_rf_vs_cnn1d_loso.md  expert_rf_vs_flatten_rf_intra.md  expert_rf_vs_flatten_rf_loso.md  flatten_rf_intra_vs_loso.md  summary.md
scripts/: plot_clip_confusion.py  visualize_features.py
src/expr_movements/: __init__.py  config.py  evaluate.py  run.py  splits.py  train.py  viz.py
src/expr_movements/cli/: __init__.py  build_dataset.py  evaluate.py  featurize.py  parse_trc.py  report.py  train.py
src/expr_movements/data/: __init__.py  dataset.py  trc.py  windows.py
src/expr_movements/features/: __init__.py  expert.py  preprocess.py
src/expr_movements/models/: __init__.py  base.py  classic.py  neural.py  registry.py
tests/: test_config_and_run.py  test_dataset.py  test_evaluate.py  test_features.py  test_neural.py  test_preprocess.py  test_splits.py  test_train.py  test_trc.py  test_viz.py  test_windows.py
