[project]
name = "expression-in-movements-sap"
version = "0.1.0"
description = "Emotion classification from motion-capture (TRC) walking sequences: expert features + classic ML vs. neural network."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "scipy>=1.13",
    "pyarrow>=16.0",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "torch>=2.3",
]

[project.scripts]
# Thin CLI entry points; all logic lives in src/expr_movements.
expr-parse = "expr_movements.cli.parse_trc:main"
expr-build-dataset = "expr_movements.cli.build_dataset:main"
expr-featurize = "expr_movements.cli.featurize:main"
expr-train = "expr_movements.cli.train:main"
expr-evaluate = "expr_movements.cli.evaluate:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "jupyter>=1.0",
    "matplotlib>=3.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/expr_movements"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
testpaths = ["tests"]
