[project]
name = "expression-in-movements-sap"
version = "0.1.0"
description = "Emotion classification from motion-capture (TRC) walking sequences: expert features + classic ML vs. neural network."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "scipy>=1.13",
    "pyarrow>=16.0",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "torch>=2.3",
]

[project.optional-dependencies]
# Phase 7 figures (latent PCA, confusion / comparison charts). Imported lazily in
# expr_movements.viz, so the core eval surface works without it; install with
# `uv sync --extra viz` to render.
viz = [
    "matplotlib>=3.9",
]

[project.scripts]
# Thin CLI entry points; all logic lives in src/expr_movements.
expr-parse = "expr_movements.cli.parse_trc:main"
expr-build-dataset = "expr_movements.cli.build_dataset:main"
expr-featurize = "expr_movements.cli.featurize:main"
expr-train = "expr_movements.cli.train:main"
expr-evaluate = "expr_movements.cli.evaluate:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "jupyter>=1.0",
    "matplotlib>=3.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/expr_movements"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint.per-file-ignores]
# matplotlib is an optional extra; test_viz gates the whole module on it via
# pytest.importorskip, which must run before the viz imports it guards (E402).
"tests/test_viz.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
